--- a/Gradient descent.ipynb
+++ b/Gradient descent.ipynb
@@ -64,12 +64,16 @@
     "cost = np.zeros(3000)\n",
     "alpha = 0.01\n",
     "\n",
-    "for i in range(3000):\n",
+    "for i in range(2999):\n",
     "    y = np.matmul(x,p)\n",
     "    error = y - r\n",
     "    cost[i] = np.matmul(error.T,error) / (2 * m)\n",
     "    z = np.matmul(x.T,error)\n",
-    "    p = p - alpha * z / m"
+    "    p = p - alpha * z / m",
+    
+    "y = np.matmul(x,p)\n",
+    "error = y - r\n",
+    "cost[2999] = np.matmul(error.T,error) / (2 * m)\n"
    ]
   },
   {
