--- a/Gradient descent.ipynb
+++ b/Gradient descent.ipynb
@@ -67,7 +67,7 @@
     "    error = y - r\n",
     "    cost[i] = np.matmul(error.T,error) / (2 * m)\n",
     "    z = np.matmul(x.T,error)\n",
-    "    p = p - alpha * z / m",
+    "    p = p - alpha * z / m\n",
     "y = np.matmul(x,p)\n",
     "error = y - r\n",
     "cost[2999] = np.matmul(error.T,error) / (2 * m)\n"
